# flockdar

./: .gitignore  CLAUDE.md  LICENSE  README.md  ROADMAP.md  SETUP.md  Taskfile.yml  detect.py  discover.py  enrich.py  pyproject.toml  serial_import.py  tui.py
.claude/agents/: esp32-dev.md  signature-researcher.md
deploy/: README.md  flockdar-ingest.service
docs/: README.md  REQUIREMENTS.md  ROADMAP.md  architecture.md  flipper-inspired-features.md  protocol.md
docs/adr/: 0001-go-as-primary-language.md  0002-new-repository.md  0003-wire-protocol.md  0004-sync-strategy.md  0005-hardware-platforms.md  0006-esp32-firmware-language.md  0007-meshtastic-gps.md  0008-lora-tdeck-comms.md  0009-taskfile-and-go-generators.md  0010-signatures-toml.md  0011-typescript-web-ui.md  0012-oui-database.md  0013-wifi-coconut-userspace-driver.md  0014-android-bluetooth-tethering.md  0015-security-and-auth.md  0016-database.md  0017-logging.md  0018-error-handling.md  0019-offline-maps.md  0020-update-strategy.md  0021-configuration.md  0022-mascot-and-branding.md
docs/hardware/: pelican-case-build.md
docs/setup/: pelican-hub.md  tdeck.md
esp32/: .gitignore  BOARDS.md  HARDWARE.md  README.md  SOAK.md  gen_oui_header.py  oui_list.h  pin_spec.py  platformio.ini  screenshot.py  vendor_list.h
esp32/include/: tdeck_tft_setup.h
esp32/scripts/: upload_port_diag.py
esp32/src/: audio.cpp  audio.h  ble_scanner.cpp  ble_scanner.h  config.h  display.cpp  display.h  flock_dedup.cpp  flock_dedup.h  gps.cpp  gps.h  gps_track.cpp  gps_track.h  lora_scanner.cpp  lora_scanner.h  main.cpp  match.cpp  match.h  pins.h  protocol.h  rf_pending.cpp  rf_pending.h  rf_sightings.cpp  rf_sightings.h  sdlog.cpp  sdlog.h  serial_cmd.cpp  serial_cmd.h  serial_out.cpp  serial_out.h  signing.cpp  signing.h  stats.cpp  stats.h  tdeck_board.h  tdeck_icons.cpp  tdeck_icons.h  tdeck_theme.h  tdeck_ui.cpp  tdeck_ui.h  (+6 more)
esp32/tests/: tone_dump.cpp
src/flockdar/: __init__.py  __main__.py  detect.py  discover.py  enrich.py  gps_source.py  scan_native.py  serial_import.py  signatures.py  tui.py  wigle_runs.py
tests/: conftest.py  test_ble_ad_walk.py  test_detect.py  test_enrich.py  test_gps_nmea.py  test_gps_source.py  test_match_parity.py  test_oui_header_sync.py  test_pins.py  test_scan_native.py  test_serial_import.py  test_signatures.py  test_tone_synth.py  test_wifi_frame_parser.py
tests/esp32/: __init__.py  ble_ad.py  match_parity.py  wifi_frame.py
