[project]
name = "flockdar"
version = "0.1.0"
description = "Passive RF detection of Flock Safety ALPR cameras from WiGLE wardriving data"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["flock-safety", "alpr", "wigle", "surveillance", "privacy", "wardriving"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = [
    "httpx>=0.28.1",
    "textual>=8.2.7",
]

[project.scripts]
flockdar = "tui:main"

[project.urls]
"Source" = "https://github.com/thehappydinoa/flockdar"
"Issue Tracker" = "https://github.com/thehappydinoa/flockdar/issues"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
