[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flockdar"
dynamic = ["version"]
description = "Passive RF detection of Flock Safety ALPR cameras from WiGLE wardriving data"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "thehappydinoa", email = "thehappydinoa@gmail.com" }]
keywords = ["flock-safety", "alpr", "wigle", "surveillance", "privacy", "wardriving"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = [
    "httpx>=0.28.1",
    "pyserial>=3.5",
    "textual>=8.2.7",
]

[project.scripts]
flockdar = "flockdar.tui:main"
flockdar-ingest = "flockdar.serial_import:main"
flockdar-runs = "flockdar.wigle_runs:main"

[project.urls]
"Source" = "https://github.com/thehappydinoa/flockdar"
"Issue Tracker" = "https://github.com/thehappydinoa/flockdar/issues"

[project.optional-dependencies]
esp32 = [
    "pillow>=12.2.0",
    "platformio>=6.1.19",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.15",
]

[tool.hatch.version]
path = "src/flockdar/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/flockdar"]

[tool.hatch.build.targets.sdist]
include = ["src/flockdar", "tests", "esp32", "README.md", "SETUP.md", "ROADMAP.md", "LICENSE"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "venv",
    "vendor",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"esp32/gen_oui_header.py" = ["F541"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
